# metu-assistant

./: .gitattributes  .gitignore  app.py  ingest.py  pyproject.toml  requirements.txt  test_search.py  todo.md
data/raw/: 1.5.2547.txt  1759306432459.yurt-disi-ogrenci-kabulune-iliskin-esaslar.txt  2015-2017_general_catalog_final.txt  2018.txt  2019.txt  2020.txt  2021.txt  2022.txt  2023.txt  2024.txt  2024_yks_kayit_kilavuzu.txt  2025-2026_ogrenim_ucreti_11082025.txt  2025-2026_tuition_fee_11082025.txt  2865e307-bf10-4793-bbb3-fb32adaa434f.txt  2_pdfsam_b83a83f0047349aaba15ba3a4fd49cdd.txt  30.12.2025_cekilis_sonuclari.txt  7417-sayili-kanun-uygulama-ilkeleri_degisen_83_madde.txt  C_C_HRS4R.txt  HRS4R_EURAXESS_ActionPlan.txt  OTMR_policy.txt  academic_integrity_guide_for_students.txt  academic_offerings_undergrad.compressed.txt  address_information.txt  beyan_belgesi_ingilizce_revize.txt  diploma_denklik_belgesi_taahhutnamesi_2022_0.txt  ek-1-ek-3.txt  ek-2.txt  general_catalog_2013_2015_4_0.txt  grad-handout-eng.txt  ilmi_huviyet_genel_duyuru_kilavuz.txt  iso.metu.edu.tr_en_5-step-application-undergraduate-programs-metu-international-student.txt  iso.metu.edu.tr_en_about-ankara.txt  iso.metu.edu.tr_en_about-odtu.txt  iso.metu.edu.tr_en_announcement_2024-tr-yos1-applications.txt  iso.metu.edu.tr_en_announcement_2025-tr-yos1-applications.txt  iso.metu.edu.tr_en_announcement_2025-yok-scholarship-students-ethiopia.txt  (+672 more)
data/vectordb/: metu_faiss_index.faiss  (+1 more)
src/: cleanup_old_files.py  config.py  embeddings.py  pdf_processor.py  rag_chain.py  scraper.py
